# Zentify-Cleaner

./: Cargo.toml  LICENSE  README.md  system_info_fixed.rs
src/: lib.rs  main.rs
src/cleaning/: mod.rs  temp_files.rs
src/monitoring/: mod.rs  system_info.rs
src/ui/: app.rs  mod.rs  style.rs  widgets.rs
